# SLAM-estimator

./: CMakeLists.txt  README.md
data/: imu.txt  projections.csv
estimator/: Estimator.cpp  Estimator.h  IMUMeasurement.h  Measurements.h  SnapdragonEstimator.cpp  SnapdragonEstimator.h  SnapdragonParser.cpp  SnapdragonParser.h  StereoMeasurement.h  main.cpp
estimator/old/: Estimator.cpp  main.cpp
